--- a/chess.html
+++ b/chess.html
@@ -21,6 +21,13 @@
 			background-color: var(--bgcolor);
 			border-color: var(--fgcolor);
 			font-size: 10mm;
+			line-height: 1em;
+		}
+
+		input[type=number] {
+			font-size: medium;
+			vertical-align: middle;
+			width: 2em;
 		}
 
 		#alertcontainer {
@@ -42,14 +49,13 @@
 		}
 
 		.alert {
-			margin: auto;
+			/* margin: auto; */
 			border: 1px solid var(--fgcolor);
 			border-radius: 5px;
 			box-shadow: 10px 10px 10px rgb(0 0 0 / 20%);
-			min-width: 10em;
 			padding: 1em;
-			background-color: var(--bgcolor);
-			font-size: 200%;
+			/* background-color: var(--bgcolor); */
+			/* font-size: 200%; */
 			text-align: center;
 		}
 
@@ -130,9 +136,11 @@
 <body>
 	<div id="boardtext"></div>
 	<input id="guides" type="checkbox" checked><label for="guides">Show potential moves</label>
+	<label for="ai_level">AI level </label><input id="ai_level" type="number" value="1" min="1"
+		onchange="say('Level ' + this.value)">
 	<input id="black_ai_box" type="checkbox" checked><label for="black_ai_box">Black AI</label>
 	<input id="white_ai_box" type="checkbox"><label for="white_ai_box">White AI</label>
-	<input id="speak_black" type="checkbox"><label for="speak_black">Speak black moves</label>
+	<input id="speak_black" type="checkbox" checked><label for="speak_black">Speak black moves</label>
 	<input id="speak_white" type="checkbox"><label for="speak_white">Speak white moves</label>
 	<div id="logtext"></div>
 	<div id="alertcontainer" onclick="if(event.target===this)this.style.visibility='hidden'"></div>
@@ -336,10 +344,12 @@
 				const rank = 8 - y
 				if (move === `Ke${rank}g${rank}`) { // TODO? Only 5171 according to https://en.wikipedia.org/wiki/ICCF_numeric_notation
 					move = '0-0'
+					if (do_log) say("Castle.")
 					board.grid[y][7].move(board, 'f' + rank)
 				}
 				if (move === `Ke${rank}c${rank}`) {
 					move = '0-0-0'
+					if (do_log) say("Castle.")
 					board.grid[y][0].move(board, 'd' + rank)
 				}
 				board.log_check(move, 1 - this.color)
@@ -400,8 +410,9 @@
 				const double_jump = xy2fr(this.x, this.color ? 6 : 1) + xy2fr(this.x, this.color ? 4 : 3)
 				const log = board.log
 				if (log.slice(-2)[0].slice(0, 4) === double_jump) {
-					log[log.length - 1] += ' e.p.'  // FIXME: c4 captured on c3.
 					board.grid[this.y + (this.color ? -1 : 1)][this.x] = ' '
+					log[log.length - 1] += ' e.p.'
+					if (do_log) say("En passant.")
 				}
 			}
 		}
@@ -457,18 +468,16 @@
 				for (let row in this.grid) {
 					for (let col in this.grid) {
 						let piece = this.grid[row][col]
-						if (piece.color === color) {
-							const moves = piece.get_moves(this)
-							for (let move of moves) {
-								const new_board = this.copy()
-								const new_piece = new_board.grid[row][col]
-								new_piece.move(new_board, xy2fr(...move))
-								if (!new_board.is_check(color)) saves.push(new_piece.char + xy2fr(piece.x, piece.y) + xy2fr(...move))
-							}
+						if (piece.color !== color) continue
+						const moves = piece.get_moves(this)
+						for (let move of moves) {
+							const new_board = this.copy()
+							const new_piece = new_board.grid[row][col]
+							new_piece.move(new_board, xy2fr(...move))
+							if (!new_board.is_check(color)) saves.push(new_piece.char + xy2fr(piece.x, piece.y) + xy2fr(...move))
 						}
 					}
 				}
-				if (saves.length > 0) console.log("Save by", saves)
 				return this.is_check(color) && king.get_moves(this).length === 0 && saves.length === 0
 			}
 
@@ -499,7 +508,10 @@
 			log_check(move, color) {
 				let c = this.is_check(color) ? (this.is_mate(color) ? '#' : '+') : ''
 				if (c === '+') say('Check.')
-				else if (c === '#') { c += color ? ' 1-0' : ' 0-1'; say('Checkmate. ' + ['Black', 'White'][color] + ' wins!') }
+				else if (c === '#') {
+					c += color ? ' 1-0' : ' 0-1'; say('Checkmate. ' + ['Black', 'White'][color] + ' wins!')
+					clearInterval(timer)
+				}
 				this.log.push(move + c)
 			}
 
@@ -545,7 +557,7 @@
 			const log = board.log
 
 			let files = `<span class="square">` + (` abcdefgh`.split('').join('</span><span class="square">')) + `</span>`
-			let lines = [files]
+			let lines = [files + `<span id="clock1"></span>`]
 			for (let row in grid) {
 				let line = `<span class="square">${8 - row}</span>`
 				for (let col in grid) {
@@ -554,7 +566,7 @@
 				line += `<span class="square">${8 - row}</span>`
 				lines.push(line)
 			}
-			lines.push(files)
+			lines.push(files + `<span id="clock0"></span>`)
 
 			files = ' abcdefgh'
 			let blank = ' '
@@ -597,6 +609,7 @@
 			if (txt.length > 97) console.log(`...${txt.slice(-97)}`)
 			else console.log(txt)
 
+			show_clock()
 			document.querySelectorAll('.square').forEach(el => {
 				el.onmousedown = function (e) {
 					e.preventDefault()  // Stop doubleclick select.
@@ -634,40 +647,59 @@
 			return array[Math.floor(Math.random() * array.length)]
 		}
 
-		async function ai_move(color) {
-			if (typeof color === "undefined") color = 1 - board.log.length % 2
-			const pieces = board.get_pieces(color)
+		async function ai_move(board_in, depth, color) {
+			var start_time = performance.now()
+			let my_board = board
+			if (typeof board_in !== "undefined") my_board = board_in
+			if (typeof depth === "undefined") depth = 0
+			else if (depth > ai_level.value - 1) return
+			if (typeof color === "undefined") color = 1 - my_board.log.length % 2
+			const pieces = my_board.get_pieces(color)
+			pieces.forEach(p => p.moves = p.get_moves(my_board))
 			let best_score = 9999
 			let best_move = null
 			let best_piece = null
-			const max_think = 100
+			let max_think = 100
+			if (depth > 1) max_think = 2
 			for (let i = 0; i < max_think; ++i) {
 				const piece = random_choice(pieces)
-				const moves = piece.get_moves(board)
+				const moves = piece.moves
 				if (moves.length > 0) {
 					const move = random_choice(moves)
 					// Eval move.
-					const new_board = board.copy()
+					const new_board = my_board.copy()
 					const new_piece = new_board.grid[piece.y][piece.x]
 					const capture = new_board.grid[move[1]][move[0]]
-					let fr = xy2fr(...move)
-					new_piece.move(new_board, fr)
+					new_piece.move(new_board, xy2fr(...move))
 					if (new_board.is_check(color)) continue  // Keep own king safe.
-					if (new_board.is_mate(1 - color)) {
-						best_move = move
-						best_piece = piece
-						break
-					}
+					// if (new_board.is_mate(1 - color)) {
+					// 	best_move = move
+					// 	best_piece = piece
+					// 	break
+					// }
+					// Set response.
+					await ai_move(new_board, depth + 1, 1 - color)
+					const my_score = new_board.get_pieces(color).reduce((sum, el) => sum + el.value, 0)
 					const enemy_score = new_board.get_pieces(1 - color).reduce((sum, el) => sum + el.value, 0)
-					if (enemy_score < best_score) {
-						best_score = enemy_score
+					const score = enemy_score - my_score
+					if (score < best_score) {
+						best_score = score
 						best_move = move
 						best_piece = piece
 					}
 				}
 			}
-			if (best_piece) await show_move(xy2fr(best_piece.x, best_piece.y), xy2fr(...best_move))
-			else { board.log.push('½–½'); say('Draw.') }
+			if (depth > 0) {
+				if (best_piece) best_piece.move(my_board, xy2fr(...best_move))
+			} else {
+				if (best_piece) await show_move(xy2fr(best_piece.x, best_piece.y), xy2fr(...best_move))
+				else { 
+					my_board.log.push('½–½')
+					say('Draw.')
+					clearInterval(timer)
+				}
+			}
+			if (depth < 1) console.log(`Level ${ai_level.value} max_think ${max_think} took ${ms2time(performance.now() - start_time)}`)
 		}
 		globalThis.ai_move = ai_move
 		const think_time = 2500
@@ -675,8 +707,9 @@
 		import sleep from './lib/sleep.mjs'
 		import say_it from './lib/say.mjs'
 		function say(msg) {
-			say_it(msg, 2)
+			say_it(msg, 1.9)
 		}
+		window.say = say
 
 		async function show_move(start_fr, stop_fr, is_human) {
 			const piece = board.fr2p(start_fr)
@@ -706,12 +739,21 @@
 					<button onclick="promote('${stop_fr}', 'R', ${color})">♜</button>
 					`
 				nonblocking_alert(html)
-				while (getComputedStyle(alertcontainer).visibility === 'visible') await(sleep(1000))
+				while (getComputedStyle(alertcontainer).visibility === 'visible') await (sleep(1000))
 			}
 
-			if (board.log[board.log.length-1].indexOf('#') > -1) return
-			if (color === WHITE && black_ai_box.checked) { await sleep(think_time); ai_move(BLACK) }
-			if (color === BLACK && white_ai_box.checked) { await sleep(think_time); ai_move(WHITE) }
+			if (board.log[board.log.length - 1].indexOf('#') > -1) return
+			const max_moves = 75
+			if (board.log.length > max_moves && !board.log.slice(-max_moves).some(s => s.indexOf('x') > -1 || s.match(/^[a-h]/) > -1)) {
+				const msg = `${max_moves} moves without checkmate, capture, or pawn move. Draw.`
+				console.log(msg)
+				say(msg)
+				clearInterval(timer)
+				return
+			}
+			start_clock(1 - color)
+			if (color === WHITE && black_ai_box.checked) { await sleep(think_time); ai_move(board, 0, BLACK) }
+			if (color === BLACK && white_ai_box.checked) { await sleep(think_time); ai_move(board, 0, WHITE) }
 		}
 
 		export default function promote(fr, kind, color) {
@@ -733,12 +775,41 @@
 			d.innerHTML = html
 			alertcontainer.appendChild(d)
 		}
+		globalThis.modal = nonblocking_alert
+
+		globalThis.timer = null
+		const clock_start = [0, 0]
+		const clock_running = [false, false]
+		const clock_ms = [0, 0]
+		function start_clock(color) {
+			clock_start[color] = performance.now()
+			clock_running[color] = true
+			clock_running[1 - color] = false
+			clock_ms[1 - color] += performance.now() - clock_start[1 - color]
+			show_clock()
+			clearInterval(timer)
+			timer = setInterval(show_clock, 1000)
+		}
+		function show_clock() {
+			for (let color of [0, 1]) {
+				const el = document.getElementById('clock' + color)
+				if (clock_running[color]) el.innerText = ms2time(clock_ms[color] + performance.now() - clock_start[color])
+				else el.innerText = ms2time(clock_ms[color])
+			}
+		}
+		window.show_clock = show_clock
+		function ms2time(ms) {
+			const secs = ms / 1000
+			return ('0' + Math.floor(secs / 60)).slice(-2) + ':' + ('0' + Math.floor(secs % 60)).slice(-2)
+		}
+		window.ms2time = ms2time
 
 		const board = new Board()
 		board.reset()
 		render(board)
 		globalThis.board = board
-		if (white_ai_box.checked) ai_move(WHITE)
+		start_clock(WHITE)
+		if (white_ai_box.checked) ai_move(board, 0, WHITE)
 	</script>
 </body>
 
